Fix alignment in home.css

--- a/app/home.css
+++ b/app/home.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
     padding-left: 5vw;
     padding-right: 5vw;
 }
